# RFantibody

./: .gitignore  CLAUDE.md  Dockerfile  README.md  README.orig.md  pyproject.toml  setenv.sh  singularity.def
include/: download_weights.sh  setup.sh  setup_sif.sh
scripts/: proteinmpnn_interface_design.py  rf2_predict.py  rfdiffusion_inference.py  run_isort.sh
scripts/examples/: nanobody_full_pipeline.sh
scripts/examples/proteinmpnn/: ab_pdb_example.sh
scripts/examples/rf2/: ab_pdb_example.sh
scripts/examples/rfdiffusion/: antibody_pdbdesign.sh  antibody_qvdesign.sh  nanobody_pdbdesign.sh  nanobody_qvdesign.sh
scripts/util/: chothia2HLT.py
src/rfantibody/cli/: inference.py  quiver.py
src/rfantibody/proteinmpnn/: sample_features.py  struct_manager.py  util_protein_mpnn.py
src/rfantibody/proteinmpnn/model/: protein_mpnn_run.py
src/rfantibody/rf2/config/: base.yaml
src/rfantibody/rf2/modules/: model_runner.py  parsers.py  pose_util.py  rmsd.py  util.py
src/rfantibody/rf2/network/: RoseTTAFoldModel.py  predict.py
src/rfantibody/rfdiffusion/: util.py  util_module.py
src/rfantibody/rfdiffusion/config/inference/: no_fape_t1d_22.yaml
src/rfantibody/util/: io.py  pose.py
test/: DEV.md  README.md  conftest.py  run_tests.py
test/proteinmpnn/: conftest.py  test_cdr_targeting.py  test_proteinmpnn.py
test/proteinmpnn/scripts/: ab_seq_design.sh
test/quiver/: __init__.py  conftest.py  test_quiver.py
test/rf2/: __init__.py  conftest.py  test_rf2.py
test/rf2/inputs_for_test/: rfab_targets.json
test/rf2/scripts/: ab_prediction.sh  json_prediction.sh
test/rfdiffusion/: README.md  __init__.py  conftest.py  rfab_test_utils.py  test_rfdiffusion.py
test/rfdiffusion/reference_outputs/H100_references/: nb_designs.qv
test/rfdiffusion/scripts/: antibody_pdbdesign.sh  antibody_qvdesign.sh  nanobody_pdbdesign.sh  nanobody_qvdesign.sh
test/util/: conftest.py  test_util.py  util_test_utils.py
test/util/scripts/: antibody_hlt_conversion.sh  nanobody_hlt_conversion.sh
tests/: README.md  __init__.py  run_tests.py
tests/proteinmpnn/: __init__.py  conftest.py  test_proteinmpnn.py  test_report.txt
tests/proteinmpnn/scripts/: ab_seq_design.sh
tests/rf2/: conftest.py  test_report.txt  test_rf2.py
tests/rf2/scripts/: ab_prediction.sh
tests/rfdiffusion/: README.md  conftest.py  rfab_test_utils.py  test_report.txt  test_rfdiffusion.py
tests/rfdiffusion/reference_outputs/H100_references/: ab_designs.qv
tests/rfdiffusion/scripts/: antibody_pdbdesign.sh  antibody_qvdesign.sh  nanobody_pdbdesign.sh  nanobody_qvdesign.sh
tests/util/: conftest.py  test_util.py  util_test_utils.py
tests/util/scripts/: antibody_hlt_conversion.sh  nanobody_hlt_conversion.sh
