[tool.poetry]
name = "rfantibody"
version = "1.0.0"
description = ""
authors = [
  "Nate Bennett <nrbennett2@gmail.com>",
  "Joe Watchwell <joe.watchwell@gmail.com>"
]
readme = "README.md"
packages = [
{include = "rfantibody", from = "src"},
{include = "include"},
{include = "se3_transformer", from = "include/SE3Transformer"}
]

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.poetry.dependencies]
python = "3.10.*"
torch-utils = "*"
numpy = "1.*"
hydra-core = "*"
icecream = "*"
opt-einsum = "*"
e3nn = "*"
pyrsistent = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pandas = "*"

